# ezauth

./: .env.example  .gitignore  INSTALL.sh  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_passwords_enabled.py  003_add_verification_method.py  004_add_bot_fields.py  005_add_custom_tables.py  006_add_user_rows_and_object_storage.py  007_add_oauth_identities.py  008_add_owner_email.py
cli/: pyproject.toml
cli/src/ezauth_cli/: client.py  config.py  hashcash.py  main.py  output.py
javascript_client/: README.md  package.json  rollup.config.js
javascript_client/src/: auth.js  buckets.js  client.js  index.js  rows.js  sessions.js  storage.js  tables.js  users.js
kotlin_client/: README.md  build.gradle.kts  settings.gradle.kts
python_client/: README.md  pyproject.toml
python_client/src/ezauth_client/: __init__.py  _client.py  auth.py  buckets.py  rows.py  sessions.py  storage.py  tables.py  users.py
sdk/browser/: package.json  rollup.config.js
sdk/browser/src/: auth.js  client.js  index.js  session.js
sdk/python-server/: pyproject.toml
sdk/python-server/src/ezauth_sdk/: __init__.py  exceptions.py  jwks.py  middleware.py  types.py
src/ezauth/: config.py  crypto.py  dependencies.py  main.py  ratelimiter.py
src/ezauth/api/: admin_auth.py  middleware.py  objects.py  router.py  tables.py
src/ezauth/dashboard/: applications.py  auth.py  domains.py  email_templates.py  router.py  tenants.py  users.py
src/ezauth/db/: base.py  engine.py  redis.py
src/ezauth/docs/: index.html
src/ezauth/hosted/: auth_pages.py  router.py
src/ezauth/models/: __init__.py  application.py  audit_log.py  auth_attempt.py  bucket.py  custom_column.py  custom_row.py  custom_table.py  domain.py  oauth_identity.py  session.py  storage_object.py  tenant.py  user.py
src/ezauth/schemas/: application.py  (+9 more)
static_site/: index.html
static_site/dashboard/: ezauth.iife.js  index.html
static_site/example_app/: index.html
swift_client/: Package.swift  README.md
tests/: conftest.py  factories.py
tests/test_api/: test_health.py  test_signups.py
tests/test_integration/: test_full_flow.py
tests/test_models/: test_constraints.py
tests/test_services/: test_bots.py  test_crypto.py  test_keys.py  test_passwords.py  test_ratelimiter.py  test_sessions.py  test_tokens.py
(+82 files in other folders)
